[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
config = "0.15.13"
diesel = { version = "2.2.12", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
log = "0.4.27"
serde = "1.0.219"
simple_logger = "5.0.0"
